# dynamic-pricing-uber-data

./: README.md  gradient_descent_uber.ipynb  pyproject.toml  reinforcement_learning_uber.ipynb  reinforcement_uber.ipynb
WIP/: neural_uber.ipynb  reinforcement_learning_uber.ipynb
modules/: config.py  naive_static.py  preprocessing.py  reinforcement.py  util.py
src/: main.py  new_data.ipynb  pipeline.py
src/modules/: config.py  gradient_descent.py  naive_static.py  preprocessing.py  reinforcement.py  static.py
walkthroughs/: CLI_GUIDE.md  QUICK_REFERENCE.md  gradient_descent_walkthrough.md  notes.md
